jswt-parser/src/snapshots/jswt_parser__variable__test__basic_variable_declaration.snap
---
source: jswt-parser/src/variable.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_basic_variable_declaration",
                    module: "module/test_basic_variable_declaration",
                    start: 0,
                    end: 12,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_basic_variable_declaration",
                        module: "module/test_basic_variable_declaration",
                        start: 0,
                        end: 12,
                    },
                    source_elements: [
                        VariableDeclaration(
                            VariableDeclarationElement {
                                annotations: [],
                                export: false,
                                span: Span {
                                    file: "test_basic_variable_declaration",
                                    module: "module/test_basic_variable_declaration",
                                    start: 0,
                                    end: 12,
                                },
                                modifier: Const(
                                    Span {
                                        file: "test_basic_variable_declaration",
                                        module: "module/test_basic_variable_declaration",
                                        start: 0,
                                        end: 5,
                                    },
                                ),
                                name: Identifier {
                                    span: Span {
                                        file: "test_basic_variable_declaration",
                                        module: "module/test_basic_variable_declaration",
                                        start: 6,
                                        end: 7,
                                    },
                                    value: "x",
                                },
                                expression: Literal(
                                    Integer(
                                        IntegerLiteral {
                                            span: Span {
                                                file: "test_basic_variable_declaration",
                                                module: "module/test_basic_variable_declaration",
                                                start: 10,
                                                end: 11,
                                            },
                                            value: 1,
                                            ty: Unknown,
                                        },
                                    ),
                                ),
                                type_annotation: None,
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
