jswt-parser/src/snapshots/jswt_parser__variable__test__variable_declaration_with_type_annotation.snap
---
source: jswt-parser/src/variable.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_variable_declaration_with_type_annotation",
                    module: "module/test_variable_declaration_with_type_annotation",
                    start: 0,
                    end: 23,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_variable_declaration_with_type_annotation",
                        module: "module/test_variable_declaration_with_type_annotation",
                        start: 0,
                        end: 23,
                    },
                    source_elements: [
                        VariableDeclaration(
                            VariableDeclarationElement {
                                annotations: [
                                    Annotation {
                                        span: Span {
                                            file: "test_variable_declaration_with_type_annotation",
                                            module: "module/test_variable_declaration_with_type_annotation",
                                            start: 0,
                                            end: 5,
                                        },
                                        name: Identifier {
                                            span: Span {
                                                file: "test_variable_declaration_with_type_annotation",
                                                module: "module/test_variable_declaration_with_type_annotation",
                                                start: 1,
                                                end: 5,
                                            },
                                            value: "Test",
                                        },
                                        expr: None,
                                    },
                                ],
                                export: false,
                                span: Span {
                                    file: "test_variable_declaration_with_type_annotation",
                                    module: "module/test_variable_declaration_with_type_annotation",
                                    start: 6,
                                    end: 23,
                                },
                                modifier: Const(
                                    Span {
                                        file: "test_variable_declaration_with_type_annotation",
                                        module: "module/test_variable_declaration_with_type_annotation",
                                        start: 6,
                                        end: 11,
                                    },
                                ),
                                name: Identifier {
                                    span: Span {
                                        file: "test_variable_declaration_with_type_annotation",
                                        module: "module/test_variable_declaration_with_type_annotation",
                                        start: 12,
                                        end: 13,
                                    },
                                    value: "x",
                                },
                                expression: Literal(
                                    Integer(
                                        IntegerLiteral {
                                            span: Span {
                                                file: "test_variable_declaration_with_type_annotation",
                                                module: "module/test_variable_declaration_with_type_annotation",
                                                start: 21,
                                                end: 22,
                                            },
                                            value: 1,
                                            ty: Unknown,
                                        },
                                    ),
                                ),
                                type_annotation: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test_variable_declaration_with_type_annotation",
                                            module: "module/test_variable_declaration_with_type_annotation",
                                            start: 15,
                                            end: 18,
                                        },
                                        ty: Binding(
                                            "i32",
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
